# zicore-os

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGES-2026-07-15.md  COLAB_GUIDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MATERIALIZER_GUIDE.md  README.md  cf_config.json  check_routes.py  cli.py  cloudflare_config.json  cloudflare_setup.py  colab_setup.py  colab_upload.py  deploy-all.sh  deploy-sftp.py  dns_test2.py  docker-compose.yaml  docker-compose.yml  docker_start.py  fix_docker.ps1  gen_zichat_logo.py  install.py  install.sh  production_setup.py  requirements.txt  setup.py  ssl_setup.py  start.py  start_all.py  start_production.py  upload_entrypoint.py  web_server.py  zicore_menu.py  zicore_training.jsonl  zicore_unsloth_prototype.ipynb
agent/: __init__.py  content3d.py  core.py  generator.py  loader.py  media.py  state.py  voice.py  zio_personality.py
android/: README.md  settings.gradle  termux-setup.sh
backend/: requirements.txt
data/: generate_dataset.py  manifest.json
docs/: 3d_tools_research.md  API.md  ARCHITECTURE.md  BUTTON_TAGS.md  DEPLOYMENT.md  MAIL_VPS_SETUP.md  ORACLE_VPS_GUIDE.md
frontend/: aerospace-engineering.html  aerospace-portal.html  aerospace.html  api-docs.html  asset-registry.html  audio-engine.html  aviso-privacidad.html  browser.html  condiciones-uso.html  crypto-pay.html  dashboard.html  developer-portal.html  developer.html  disclaimer.html  display-monitor.html  ecosystem.html  engineering.html  environment.html  flight-sim.html  games.html  governance.html  (+52 more)
native/: Cargo.toml  build.bat  cfd_module.cpp
native/src/: lib.rs
(+193 files in other folders)
