[package]
name = "zicore-avionics"
version = "0.1.0"
edition = "2021"
description = "ZICORE Safety-critical avionics calculations in Rust"

[lib]
name = "zicore_avionics"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
